// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ux-loader normal page with style: emitted errors 1`] = `Array []`;

exports[`ux-loader normal page with style: emitted warnings 1`] = `Array []`;

exports[`ux-loader normal page with style: error 1`] = `null`;

exports[`ux-loader normal page with style: source-vs-result 1`] = `
"
      <template>
        <div>{{ val }}</div>
      </template>
      <style>
      div {
        color: blue;
      }
      </style>
      
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

var $app_script$ = null
$app_define$('@app-component/page', [], function($app_require$, $app_exports$, $app_module$) {
    $app_module$.exports.template = require(\\"!../../lib/loaders/template-loader.js!../../lib/loaders/fragment-loader.js?index=0&type=template!./page.ux?uxType=page&\\")
    $app_module$.exports.style = require(\\"!../../lib/loaders/style-loader.js?index=0&type=style!../../lib/loaders/fragment-loader.js?index=0&type=style!./page.ux?uxType=page\\")
});
$app_bootstrap$('@app-component/page',{ packagerVersion: QUICKAPP_TOOLKIT_VERSION });"
`;

exports[`ux-loader normal page, enablePerformanceCheck: emitted errors 1`] = `Array []`;

exports[`ux-loader normal page, enablePerformanceCheck: emitted warnings 1`] = `Array []`;

exports[`ux-loader normal page, enablePerformanceCheck: error 1`] = `null`;

exports[`ux-loader normal page, enablePerformanceCheck: source-vs-result 1`] = `
"
    <template>
      <div>{{ val }}</div>
    </template>
      
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

var $app_script$ = null
$app_define$('@app-component/page', [], function($app_require$, $app_exports$, $app_module$) {
    $app_module$.exports.template = require(\\"!../../lib/loaders/template-loader.js!../../lib/loaders/fragment-loader.js?index=0&type=template!./page.ux?uxType=page&\\")
});
$app_bootstrap$('@app-component/page',{ packagerVersion: QUICKAPP_TOOLKIT_VERSION });"
`;

exports[`ux-loader normal page: emitted errors 1`] = `Array []`;

exports[`ux-loader normal page: emitted warnings 1`] = `Array []`;

exports[`ux-loader normal page: error 1`] = `null`;

exports[`ux-loader normal page: source-vs-result 1`] = `
"
    <template>
      <div>{{ val }}</div>
    </template>
      
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

var $app_script$ = null
$app_define$('@app-component/page', [], function($app_require$, $app_exports$, $app_module$) {
    $app_module$.exports.template = require(\\"!../../lib/loaders/template-loader.js!../../lib/loaders/fragment-loader.js?index=0&type=template!./page.ux?uxType=page&\\")
});
$app_bootstrap$('@app-component/page',{ packagerVersion: QUICKAPP_TOOLKIT_VERSION });"
`;

exports[`ux-loader without <template /> tag: emitted errors 1`] = `
Array [
  Array [
    [Error: 需要模板 <template> 片段],
  ],
]
`;

exports[`ux-loader without <template /> tag: emitted warnings 1`] = `Array []`;

exports[`ux-loader without <template /> tag: error 1`] = `null`;

exports[`ux-loader without <template /> tag: source-vs-result 1`] = `
"
      <div> without template tag </div>
      
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

var $app_script$ = null
$app_define$('@app-component/page', [], function($app_require$, $app_exports$, $app_module$) {
    $app_module$.exports.template = {}
});
$app_bootstrap$('@app-component/page',{ packagerVersion: QUICKAPP_TOOLKIT_VERSION });"
`;
